--- a/Admin Panel/index.htm
+++ b/Admin Panel/index.htm
@@ -372,7 +372,7 @@
                const ctx = document.getElementById('myChart');
 
                new Chart(ctx, {
-                  type: 'line',
+                  type: 'bar',
                   data: {
                      labels: ['january', 'fabruary', 'march', 'april', 'may', 'june'],
                      datasets: [{
